k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nestjs-api
  namespace: default
  labels:
    app: nestjs-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: nestjs-api
  sessionAffinity: None
